[package]
name = "keygen"
version = "0.1.0"
edition = "2021"
description = "An uniform random key generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
lazy_static = "1.4.0"
rand = "0.8.5"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"

[profile.release]
lto = true
panic = "abort"
strip = true
opt-level = "z"
